fixed answer not being sent issue